# slam_resources

./: .gitignore  .gitmodules  README.md
EgomotionEstimation/DirectMethod/: CMakeLists.txt  direct_method.cpp
EgomotionEstimation/E2RT/: CMakeLists.txt  E2Rt.cpp
EgomotionEstimation/GN_BA/: CMakeLists.txt  GN-BA.cpp
EgomotionEstimation/ICP/: CMakeLists.txt  ICP.cpp
EgomotionEstimation/OpticalFlow/: CMakeLists.txt  optical_flow.cpp  useLK.cpp
ImageProcess/ComputeORB/: .computeORB.cpp.swo  CMakeLists.txt  computeORB.cpp
ImageProcess/DetectEllipse/: CMakeLists.txt  DetectEllipse.cpp  DetectEllipse.h  main.cpp
ImageProcess/UndistortImage/: CMakeLists.txt  undistort_image.cpp
LoopClosure/: CMakeLists.txt  README.md
Mapping/: .gitignore  README.md
Mapping/DenseRGBD/: CMakeLists.txt  README.md  pointcloud_mapping.cpp
Mapping/DenseStereo/stereo01/: CMakeLists.txt  main.cpp
Mapping/DenseStereo/stereo02/: CMakeLists.txt  disparity.cpp
Mapping/ros_wrapper/src/stereo_reconstruct/: CMakeLists.txt  nodelet_plugins.xml  package.xml
Mapping/ros_wrapper/src/stereo_reconstruct/launch/: depth_cloud_frames.launch  stereo_reconstruct.launch
Mapping/ros_wrapper/src/stereo_reconstruct/launch/config/: stereo_reconstruct.rviz
Mapping/ros_wrapper/src/stereo_reconstruct/src/: ssd_block_match.cl  stereo_bm_cl.cpp  stereo_bm_cl.h  stereo_reconstruct.cpp
Optimization/: CMakeLists.txt  README.md
Optimization/GaussNewton/: CMakeLists.txt
Optimization/ba_ceres/: ceresBundle.cpp
Optimization/ba_g2o/: g2o_bundle.cpp
Optimization/ba_gn/: CMakeLists.txt
Optimization/bundle_adjustment/ba_ceres/: ceresBundle.cpp
Optimization/bundle_adjustment/ba_g2o/: CMakeLists.txt  g2o_bundle.cpp
Optimization/bundle_adjustment/ba_gauss_newton/: ba_gauss_newton.cpp
Optimization/bundle_adjustment/common/: BALProblem.cpp  BundleParams.h
Optimization/gauss_newton/: gauss_newton.cpp
Optimization/optimization_basis/g2o_curve_fitting/: CMakeLists.txt  g2o_curve_fitting.cpp
Optimization/pose_graph/: CMakeLists.txt
